--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@ logs
 *.log
 npm-debug.log*
 
+### Vim ###
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
+
 # Dependency directory
 node_modules
 
