--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "node-uuid": "^1.4.7",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.1.1",
