--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^3.3.6",
+    "cola": "tgdwyer/WebCola#master",
     "cytoscape": "^2.6.1",
     "cytoscape-cola": "^1.3.0",
+    "cytoscape-cxtmenu": "^2.4.0",
     "jquery": "^2.2.0",
     "node-uuid": "^1.4.7",
     "react": "^0.14.7",
@@ -17,8 +19,7 @@
     "react-redux": "^4.1.1",
     "redux": "^3.1.2",
     "redux-thunk": "^1.0.3",
-    "redux-undo": "^0.6.0",
-    "cola": "tgdwyer/WebCola#master"
+    "redux-undo": "^0.6.0"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
