--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "babel-loader": "^5.1.4",
     "babel-plugin-react-transform": "^1.1.0",
     "css-loader": "^0.23.1",
+    "eslint": "^2.0.0",
+    "eslint-plugin-react": "^3.16.1",
     "expect": "^1.6.0",
     "express": "^4.13.3",
     "node-libs-browser": "^0.5.2",
