--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.1.1",
+    "react-split-pane": "^0.1.23",
     "redux": "^3.1.2",
     "redux-thunk": "^1.0.3",
     "redux-undo": "^0.6.0"
