--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-uuid": "^1.4.7",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-frame-component": "^0.5.0",
     "react-redux": "^4.1.1",
     "react-split-pane": "^0.1.23",
     "redux": "^3.1.2",
