--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "cola": "tgdwyer/WebCola#master",
     "cytoscape": "^2.6.1",
     "cytoscape-cola": "^1.3.0",
     "cytoscape-cxtmenu": "^2.4.0",
@@ -21,7 +20,8 @@
     "react-split-pane": "^0.1.23",
     "redux": "^3.1.2",
     "redux-thunk": "^1.0.3",
-    "redux-undo": "^0.6.0"
+    "redux-undo": "^0.6.0",
+    "webcola": "^3.1.3"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
