--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^2.2.0",
     "node-uuid": "^1.4.7",
     "react": "^0.14.7",
+    "react-codemirror": "^0.2.5",
     "react-dom": "^0.14.7",
     "react-frame-component": "^0.5.0",
     "react-redux": "^4.1.1",
