--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cytoscape-cola": "^1.3.0",
     "cytoscape-cxtmenu": "^2.4.0",
     "jquery": "^2.2.0",
+    "js-yaml": "^3.5.5",
     "node-uuid": "^1.4.7",
     "react": "^0.14.7",
     "react-codemirror": "^0.2.5",
