--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "babel-preset-react": "^6.5.0",
     "bootstrap": "^3.3.6",
     "cytoscape": "^2.6.1",
     "cytoscape-cola": "^1.3.0",
@@ -14,11 +15,11 @@
     "jquery": "^2.2.0",
     "js-yaml": "^3.5.5",
     "node-uuid": "^1.4.7",
-    "react": "^0.14.7",
+    "react": "^15.0.1",
     "react-codemirror": "^0.2.5",
-    "react-dom": "^0.14.7",
+    "react-dom": "^15.0.1",
     "react-frame-component": "^0.5.0",
-    "react-redux": "^4.1.1",
+    "react-redux": "^4.4.2",
     "react-split-pane": "^0.1.30",
     "redux": "^3.1.2",
     "redux-thunk": "^1.0.3",
@@ -37,6 +38,7 @@
     "node-libs-browser": "^0.5.2",
     "node-sass": "^3.4.2",
     "react-transform-hmr": "^1.0.0",
+    "redux-devtools": "^3.2.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.9.11",
