--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cytoscape-cxtmenu": "^2.4.0",
     "jquery": "^2.2.0",
     "js-yaml": "^3.5.5",
+    "material-ui": "^0.15.0-alpha.2",
     "node-uuid": "^1.4.7",
     "react": "^15.0.1",
     "react-codemirror": "^0.2.5",
