--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "cytoscape-cxtmenu": "^2.4.0",
     "jquery": "^2.2.0",
     "js-yaml": "^3.5.5",
-    "material-ui": "^0.15.0-alpha.2",
     "node-uuid": "^1.4.7",
     "react": "^15.0.1",
     "react-codemirror": "^0.2.5",
@@ -22,9 +21,11 @@
     "react-frame-component": "^0.5.0",
     "react-redux": "^4.4.2",
     "react-split-pane": "^0.1.30",
+    "react-tinymce": "^0.5.1",
     "redux": "^3.1.2",
     "redux-thunk": "^1.0.3",
     "redux-undo": "^0.6.0",
+    "tinymce": "^4.3.13",
     "webcola": "^3.1.3"
   },
   "devDependencies": {
