--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-yaml": "^3.5.5",
     "node-uuid": "^1.4.7",
     "react": "^15.0.1",
+    "react-bootstrap": "^0.30.5",
     "react-codemirror": "^0.2.5",
     "react-dom": "^15.0.1",
     "react-frame-component": "^0.5.0",
