リファクタ

--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "js-yaml": "^3.5.5",
     "node-uuid": "^1.4.7",
     "react": "^15.0.1",
+    "react-addons-linked-state-mixin": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-codemirror": "^0.2.5",
     "react-dom": "^15.0.1",
     "react-frame-component": "^0.5.0",
+    "react-mixin": "^3.0.5",
     "react-redux": "^4.4.2",
     "react-split-pane": "^0.1.30",
     "react-tinymce": "^0.5.1",
