分岐時設定を並び替えできるように修正

--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "jquery": "^2.2.0",
     "js-yaml": "^3.5.5",
     "node-uuid": "^1.4.7",
-    "react": "^15.0.1",
+    "react": "^15.3.2",
     "react-addons-linked-state-mixin": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-codemirror": "^0.2.5",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.0.1",
     "react-frame-component": "^0.5.0",
     "react-mixin": "^3.0.5",
