--- a/package.json
+++ b/package.json
@@ -8,30 +8,40 @@
   "license": "MIT",
   "dependencies": {
     "babel-preset-react": "^6.5.0",
-    "bootstrap": "^3.3.6",
+    "bootstrap": "^3.3.7",
+    "css-loader": "^0.23.1",
     "cytoscape": "^2.7.10",
     "cytoscape-cola": "^1.4.2",
     "cytoscape-cxtmenu": "^2.8.1",
-    "jquery": "^2.2.0",
-    "js-yaml": "^3.5.5",
+    "eslint": "^2.13.1",
+    "eslint-plugin-react": "^3.16.1",
+    "expect": "^1.20.2",
+    "jquery": "^2.2.4",
+    "js-yaml": "^3.6.1",
+    "node-libs-browser": "^0.5.3",
+    "node-sass": "^3.11.2",
     "node-uuid": "^1.4.7",
     "react": "^15.3.2",
     "react-addons-linked-state-mixin": "^15.3.2",
-    "react-bootstrap": "^0.30.5",
+    "react-bootstrap": "^0.30.6",
     "react-codemirror": "^0.2.5",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^15.0.1",
-    "react-frame-component": "^0.5.0",
+    "react-dom": "^15.3.2",
+    "react-frame-component": "^0.5.2",
     "react-mixin": "^3.0.5",
     "react-redux": "^4.4.2",
-    "react-split-pane": "^0.1.30",
+    "react-split-pane": "^0.1.52",
     "react-tinymce": "^0.5.1",
-    "redux": "^3.1.2",
+    "redux": "^3.6.0",
     "redux-thunk": "^1.0.3",
     "redux-undo": "^0.6.0",
-    "tinymce": "^4.3.13",
-    "webcola": "^3.1.3"
+    "sass-loader": "^3.2.3",
+    "tinymce": "^4.4.3",
+    "webcola": "^3.1.3",
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.1"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
