--- a/package.json
+++ b/package.json
@@ -13,13 +13,8 @@
     "cytoscape": "^2.7.10",
     "cytoscape-cola": "^1.4.2",
     "cytoscape-cxtmenu": "^2.8.1",
-    "eslint": "^2.13.1",
-    "eslint-plugin-react": "^3.16.1",
-    "expect": "^1.20.2",
     "jquery": "^2.2.4",
     "js-yaml": "^3.6.1",
-    "node-libs-browser": "^0.5.3",
-    "node-sass": "^3.11.2",
     "node-uuid": "^1.4.7",
     "react": "^15.3.2",
     "react-addons-linked-state-mixin": "^15.3.2",
@@ -36,30 +31,30 @@
     "redux": "^3.6.0",
     "redux-thunk": "^1.0.3",
     "redux-undo": "^0.6.0",
-    "sass-loader": "^3.2.3",
     "tinymce": "^4.4.3",
-    "webcola": "^3.1.3",
-    "webpack": "^1.13.3",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.13.1"
+    "webcola": "^3.1.3"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
     "babel-loader": "^5.1.4",
     "babel-plugin-react-transform": "^1.1.0",
     "css-loader": "^0.23.1",
-    "eslint": "^2.0.0",
-    "eslint-plugin-react": "^3.16.1",
-    "expect": "^1.6.0",
+    "eslint": "^3.13.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
+    "expect": "^1.20.2",
     "express": "^4.13.3",
-    "node-libs-browser": "^0.5.2",
-    "node-sass": "^3.4.2",
+    "node-libs-browser": "^0.5.3",
+    "node-sass": "^3.11.2",
     "react-transform-hmr": "^1.0.0",
     "redux-devtools": "^3.2.0",
-    "sass-loader": "^3.1.2",
+    "sass-loader": "^3.2.3",
     "style-loader": "^0.13.0",
-    "webpack": "^1.9.11",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.2.0"
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.1"
   }
 }
