--- a/package.json
+++ b/package.json
@@ -7,37 +7,41 @@
   },
   "license": "MIT",
   "dependencies": {
-    "babel-preset-react": "^6.5.0",
     "bootstrap": "^3.3.7",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.26.1",
     "cytoscape": "^2.7.10",
     "cytoscape-cola": "^1.4.2",
     "cytoscape-cxtmenu": "^2.8.1",
-    "jquery": "^2.2.4",
+    "jquery": "^3.1.1",
     "js-yaml": "^3.6.1",
     "node-uuid": "^1.4.7",
     "react": "^15.3.2",
     "react-addons-linked-state-mixin": "^15.3.2",
     "react-bootstrap": "^0.30.6",
-    "react-codemirror": "^0.2.5",
+    "react-codemirror": "^0.3.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.3.2",
-    "react-frame-component": "^0.5.2",
+    "react-frame-component": "^0.6.6",
     "react-mixin": "^3.0.5",
-    "react-redux": "^4.4.2",
+    "react-redux": "^5.0.2",
     "react-split-pane": "^0.1.52",
     "react-tinymce": "^0.5.1",
     "redux": "^3.6.0",
-    "redux-thunk": "^1.0.3",
+    "redux-thunk": "^2.1.0",
     "redux-undo": "^0.6.0",
     "tinymce": "^4.4.3",
     "webcola": "^3.1.3"
   },
   "devDependencies": {
-    "babel-core": "^5.6.18",
-    "babel-loader": "^5.1.4",
-    "babel-plugin-react-transform": "^1.1.0",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2016": "^6.16.0",
+    "babel-preset-es2017": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "css-loader": "^0.23.1",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
@@ -47,11 +51,11 @@
     "eslint-plugin-react": "^6.9.0",
     "expect": "^1.20.2",
     "express": "^4.13.3",
-    "node-libs-browser": "^0.5.3",
-    "node-sass": "^3.11.2",
+    "node-libs-browser": "^2.0.0",
+    "node-sass": "^4.3.0",
     "react-transform-hmr": "^1.0.0",
     "redux-devtools": "^3.2.0",
-    "sass-loader": "^3.2.3",
+    "sass-loader": "^4.1.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
