--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "css-loader": "^0.26.1",
-    "cytoscape": "^2.7.10",
-    "cytoscape-cola": "^1.4.2",
-    "cytoscape-cxtmenu": "^2.8.1",
     "jquery": "^3.1.1",
     "js-yaml": "^3.6.1",
     "node-uuid": "^1.4.7",
@@ -30,8 +27,7 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "redux-undo": "^0.6.0",
-    "tinymce": "^4.4.3",
-    "webcola": "^3.1.3"
+    "tinymce": "^4.4.3"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
