グラフを変更

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
       "ignoreStrings": true,
       "ignoreTemplateLiterals": true
     }],
+    "no-plusplus": 0,
     "react/prop-types": 0
   }
 }
