--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "node server.js"
   },
   "license": "MIT",
+  "files": [
+    "lib"
+  ],
+  "main": "react-enquete.js",
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "css-loader": "^0.26.1",
     "jquery": "^3.1.1",
     "js-yaml": "^3.6.1",
     "node-uuid": "^1.4.7",
@@ -38,7 +41,7 @@
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-es2017": "^6.16.0",
     "babel-preset-react": "^6.16.0",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.26.1",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-loader": "^1.6.1",
