ページの切り替えが動くように修正

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
       "ignoreTemplateLiterals": true
     }],
     "no-plusplus": 0,
+    "react/jsx-filename-extension": 0,
     "react/prop-types": 0
   }
 }
