テストの追加

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,8 @@
 {
   "extends": "airbnb",
+  "plugins": [
+    "jest"
+  ],
   "rules": {
     "max-len": ["error", 140, 2, {
       "ignoreUrls": true,
@@ -10,6 +13,8 @@
     }],
     "no-plusplus": 0,
     "react/jsx-filename-extension": 0,
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "jest/no-exclusive-tests": 2,
+    "jest/no-identical-title": 2
   }
 }
