--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "description": "Enquete system using react.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest",
+    "test:watch": "yarn test -- --watch"
   },
   "license": "MIT",
   "files": [
@@ -37,6 +39,7 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
+    "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.18.0",
@@ -48,10 +51,12 @@
     "eslint-config-airbnb": "^14.0.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jest": "^1.0.2",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
     "expect": "^1.20.2",
     "express": "^4.13.3",
+    "jest": "^18.1.0",
     "node-libs-browser": "^2.0.0",
     "node-sass": "^4.3.0",
     "react-transform-hmr": "^1.0.0",
