--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,9 @@
   "plugins": [
     "jest"
   ],
+  "global": [
+    "ENV": false
+  ],
   "rules": {
     "max-len": ["error", 140, 2, {
       "ignoreUrls": true,
@@ -14,6 +17,7 @@
     "no-plusplus": 0,
     "react/jsx-filename-extension": 0,
     "react/prop-types": 0,
+    "react/no-danger": 0,
     "jest/no-exclusive-tests": 2,
     "jest/no-identical-title": 2
   }
