--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "expect": "^1.20.2",
     "express": "^4.13.3",
     "jest": "^18.1.0",
+    "node-env-file": "^0.1.8",
     "node-libs-browser": "^2.0.0",
     "node-sass": "^4.3.0",
     "react-transform-hmr": "^1.0.0",
