--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "redux-undo": "^0.6.0",
-    "tinymce": "^4.4.3"
+    "tinymce": "^4.4.3",
+    "validate.js": "^0.11.1"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
