--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "redux-undo": "^0.6.0",
+    "string": "^3.3.3",
     "tinymce": "^4.4.3",
     "validate.js": "^0.11.1"
   },
