--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-yaml": "^3.6.1",
     "json-loader": "^0.5.4",
     "node-uuid": "^1.4.7",
+    "parsleyjs": "^2.6.2",
     "react": "^15.3.2",
     "react-addons-linked-state-mixin": "^15.3.2",
     "react-bootstrap": "^0.30.6",
@@ -36,6 +37,7 @@
     "redux-undo": "^0.6.0",
     "string": "^3.3.3",
     "tinymce": "^4.4.3",
+    "tooltipster": "^4.1.7",
     "validate.js": "^0.11.1"
   },
   "devDependencies": {
