タイトルの編集を行えるように修正

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   ],
   "main": "react-enquete.js",
   "peerDependencies": {
+    "json-loader": "^0.5.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "json-loader": "^0.5.4",
     "react-redux": "^5.0.2"
   },
   "dependencies": {
@@ -65,15 +65,16 @@
     "expect": "^1.20.2",
     "express": "^4.14.1",
     "jest": "^18.1.0",
+    "json-loader": "^0.5.4",
     "node-env-file": "^0.1.8",
     "node-libs-browser": "^2.0.0",
     "node-sass": "^4.4.0",
-    "react-transform-hmr": "^1.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "json-loader": "^0.5.4",
     "react-redux": "^5.0.2",
+    "react-transform-hmr": "^1.0.0",
     "redux-devtools": "^3.2.0",
+    "riek": "^1.0.7",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.13.3",
