--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "license": "MIT",
   "files": [
-    "dist/editor.bundle.js"
+    "dist"
   ],
   "main": "react-enquete.js",
   "peerDependencies": {
