自動保存するように修正

--- a/package.json
+++ b/package.json
@@ -32,16 +32,17 @@
     "react-dnd-html5-backend": "^2.1.2",
     "react-frame-component": "^1.0.0",
     "react-mixin": "^3.0.5",
+    "react-redux": "^5.0.2",
     "react-split-pane": "^0.1.52",
     "react-tinymce": "^0.5.1",
-    "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-immutable": "^3.0.11",
     "redux-thunk": "^2.2.0",
     "redux-undo": "^0.6.0",
-    "string": "^3.3.3",
-    "tinymce": "^4.4.3",
     "riek": "^1.0.7",
+    "string": "^3.3.3",
+    "throttle-debounce": "^1.0.1",
+    "tinymce": "^4.4.3",
     "tooltipster": "^4.1.7"
   },
   "devDependencies": {
@@ -55,7 +56,6 @@
     "babel-preset-es2017": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "css-loader": "^0.26.1",
-    "json-loader": "^0.5.4",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-loader": "^1.6.1",
