ojsx-a11y/label-has-forをeslintから削除

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "no-restricted-syntax": 0,
     "no-continue": 0,
     "no-plusplus": 0,
+    "jsx-a11y/label-has-for": 0,
     "react/jsx-filename-extension": 0,
     "react/prop-types": 0,
     "react/no-danger": 0,
