--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Enquete system using react.js",
   "scripts": {
     "start": "node server.js",
-    "test": "jest",
-    "test:watch": "yarn test -- --watch",
     "build": "webpack",
-    "build:watch": "webpack --watch"
+    "build:watch": "webpack --watch",
+    "test": "jest",
+    "test:watch": "yarn test -- --watch"
   },
   "license": "MIT",
   "files": [
