--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "codemirror": "^5.24.2",
     "immutable": "^3.8.1",
     "jquery": "^3.1.1",
     "js-yaml": "^3.6.1",
