--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "codemirror": "^5.24.2",
+    "es6-promise": "^4.0.5",
+    "events": "^1.1.1",
     "immutable": "^3.8.1",
     "jquery": "^3.1.1",
     "js-yaml": "^3.6.1",
