--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "cuid": "^1.3.8",
     "immutable": "^3.8.1",
     "jquery": "^3.1.1",
     "js-yaml": "^3.6.1",
-    "node-uuid": "^1.4.7",
     "parsleyjs": "^2.6.2",
     "react-addons-linked-state-mixin": "^15.3.2",
     "react-bootstrap": "^0.30.6",
