--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "files": [
     "dist"
   ],
-  "main": "react-enquete.js",
   "peerDependencies": {
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "classnames": "^2.2.5",
     "cuid": "^1.3.8",
     "immutable": "^3.8.1",
     "jquery": "^3.1.1",
