--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "classnames": "^2.2.5",
     "codemirror": "^5.24.2",
+    "cuid": "^1.3.8",
     "es6-promise": "^4.0.5",
     "events": "^1.1.1",
-    "classnames": "^2.2.5",
-    "cuid": "^1.3.8",
     "immutable": "^3.8.1",
     "jquery": "^3.1.1",
     "js-yaml": "^3.6.1",
+    "less": "^2.7.2",
+    "less-loader": "^3.0.0",
     "parsleyjs": "^2.6.2",
     "react-addons-linked-state-mixin": "^15.3.2",
     "react-bootstrap": "^0.30.6",
@@ -68,6 +70,7 @@
     "eslint-plugin-react": "^6.9.0",
     "expect": "^1.20.2",
     "express": "^4.14.1",
+    "file-loader": "^0.10.1",
     "jest": "^18.1.0",
     "json-loader": "^0.5.4",
     "node-env-file": "^0.1.8",
@@ -79,6 +82,7 @@
     "redux-devtools": "^3.2.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.8",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.16.0"
