--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^15.3.2"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "bootstrap": "^3.3.7",
     "classnames": "^2.2.5",
     "codemirror": "^5.24.2",
