--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "bootstrap": "^3.3.7",
+    "classlist-polyfill": "^1.0.3",
     "classnames": "^2.2.5",
     "codemirror": "^5.24.2",
     "cuid": "^1.3.8",
