--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.2.5",
     "codemirror": "^5.24.2",
     "cuid": "^1.3.8",
+    "detect-browser": "^1.6.2",
     "es6-promise": "^4.0.5",
     "events": "^1.1.1",
     "immutable": "^3.8.1",
