--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "detect-browser": "^1.6.2",
     "es6-promise": "^4.0.5",
     "events": "^1.1.1",
+    "expose-loader": "^0.7.3",
+    "handsontable": "^0.31.2",
     "immutable": "^3.8.1",
     "jquery": "^3.1.1",
     "js-yaml": "^3.6.1",
@@ -39,6 +41,7 @@
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-frame-component": "^1.0.0",
+    "react-handsontable": "^0.2.1",
     "react-mixin": "^3.0.5",
     "react-numeric-input": "^2.0.7",
     "react-redux": "^5.0.2",
