--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react-mixin": "^3.0.5",
     "react-numeric-input": "^2.0.7",
     "react-redux": "^5.0.4",
-    "react-scroll": "^1.5.0",
+    "react-scroll": "1.4.8",
     "react-split-pane": "^0.1.61",
     "react-tinymce": "^0.5.1",
     "redux": "^3.6.0",
