--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "parsleyjs": "^2.6.2",
+    "raven-js": "^3.14.2",
     "react-addons-linked-state-mixin": "^15.5.2",
     "react-bootstrap": "^0.30.8",
     "react-codemirror": "^0.3.0",
