--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack",
     "build:production": "NODE_ENV=production webpack",
     "build:watch": "webpack --watch",
+    "package": "sh scripts/package.sh",
     "test": "jest",
     "test:watch": "yarn test -- --watch"
   },
