--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
       "ignoreStrings": true,
       "ignoreTemplateLiterals": true
     }],
+    "class-methods-use-this": 0,
     "no-restricted-syntax": 0,
     "no-continue": 0,
     "no-plusplus": 0,
