--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "node-env-file": "^0.1.8",
     "node-libs-browser": "^2.0.0",
     "node-sass": "^4.5.2",
+    "null-loader": "^0.1.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-transform-hmr": "^1.0.0",
