--- a/package.json
+++ b/package.json
@@ -25,29 +25,47 @@
     "react-dom": "^15.3.2"
   },
   "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "^3.3.7",
     "classlist-polyfill": "^1.0.3",
     "classnames": "^2.2.5",
     "codemirror": "^5.25.0",
+    "css-loader": "^0.28.0",
     "cuid": "^1.3.8",
     "detect-browser": "^1.7.0",
     "es6-promise": "^4.1.0",
     "events": "^1.1.1",
     "expose-loader": "^0.7.3",
+    "file-loader": "^0.11.1",
     "handsontable": "^0.31.2",
     "immutable": "^3.8.1",
+    "jest": "^19.0.2",
     "jquery": "^3.1.1",
     "js-yaml": "^3.8.3",
+    "json-loader": "^0.5.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "node-env-file": "^0.1.8",
+    "node-libs-browser": "^2.0.0",
+    "node-sass": "^4.5.2",
+    "null-loader": "^0.1.1",
     "parsleyjs": "^2.6.2",
     "raven-js": "^3.14.2",
+    "react": "^15.5.4",
     "react-addons-linked-state-mixin": "^15.5.2",
     "react-bootstrap": "^0.30.8",
     "react-codemirror": "^0.3.0",
     "react-dnd": "^2.3.0",
     "react-dnd-html5-backend": "^2.3.0",
+    "react-dom": "^15.5.4",
     "react-frame-component": "^1.0.3",
     "react-handsontable": "^0.2.1",
     "react-mixin": "^3.0.5",
@@ -56,30 +74,28 @@
     "react-scroll": "1.4.8",
     "react-split-pane": "^0.1.61",
     "react-tinymce": "^0.5.1",
+    "react-transform-hmr": "^1.0.0",
     "redux": "^3.6.0",
+    "redux-devtools": "^3.2.0",
     "redux-immutable": "^4.0.0",
-    "redux-thunk": "^2.2.0",
-    "redux-undo": "^0.6.0",
     "riek": "^1.0.7",
+    "sass-loader": "^6.0.3",
     "string": "^3.3.3",
     "strip": "^3.0.0",
+    "style-loader": "^0.16.1",
     "throttle-debounce": "^1.0.1",
     "tinymce": "^4.5.6",
     "tooltipster": "^4.2.3",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.4.1",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
     "babel-jest": "^19.0.0",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "chai": "^4.0.1",
-    "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-loader": "^1.7.1",
@@ -90,28 +106,10 @@
     "eslint-plugin-react": "^6.10.3",
     "expect": "^1.20.2",
     "express": "^4.15.2",
-    "file-loader": "^0.11.1",
-    "jest": "^19.0.2",
-    "json-loader": "^0.5.4",
-    "node-env-file": "^0.1.8",
-    "node-libs-browser": "^2.0.0",
-    "node-sass": "^4.5.2",
-    "null-loader": "^0.1.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-transform-hmr": "^1.0.0",
-    "redux-devtools": "^3.2.0",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
     "wdio-dot-reporter": "0.0.8",
     "wdio-mocha-framework": "^0.5.10",
     "wdio-selenium-standalone-service": "0.0.8",
     "wdio-spec-reporter": "^0.1.0",
-    "webdriverio": "^4.8.0",
-    "webpack": "^2.4.1",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-hot-middleware": "^2.18.0"
+    "webdriverio": "^4.8.0"
   }
 }
