--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:production": "NODE_ENV=production webpack",
     "build:watch": "webpack --watch",
     "test": "jest && node e2e_test.js",
-    "test:watch": "yarn test -- --watch",
+    "test:unit": "jest",
+    "test:unit:watch": "jest --watch",
     "test:e2e": "wdio wdio.conf.js",
     "test:e2e:watch": "wdio wdio.conf.js --watch",
     "test:e2e:repl": "wdio wdio.conf.js repl"
