--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "less-loader": "^4.0.3",
     "node-env-file": "^0.1.8",
     "node-libs-browser": "^2.0.0",
-    "node-sass": "^4.5.2",
+    "node-sass": "^4.5.3",
     "null-loader": "^0.1.1",
     "parsleyjs": "^2.6.2",
     "raven-js": "^3.14.2",
@@ -107,6 +107,20 @@
     "eslint-plugin-react": "^6.10.3",
     "expect": "^1.20.2",
     "express": "^4.15.2",
+    "file-loader": "^0.11.1",
+    "jest": "^19.0.2",
+    "json-loader": "^0.5.4",
+    "node-env-file": "^0.1.8",
+    "node-libs-browser": "^2.0.0",
+    "node-sass": "^4.5.3",
+    "null-loader": "^0.1.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-transform-hmr": "^1.0.0",
+    "redux-devtools": "^3.2.0",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
     "wdio-dot-reporter": "0.0.8",
     "wdio-mocha-framework": "^0.5.10",
     "wdio-selenium-standalone-service": "0.0.8",
