codecov.ioとの連携を追加

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "jest": {
     "verbose": true,
+    "coverageDirectory": "./coverage/",
     "collectCoverage": true
   },
   "peerDependencies": {
