--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,12 @@ addons:
       - google-chrome
     packages:
       - google-chrome-stable
-
 before_script:
   - echo "RUNTIME_CSS_URL=${RUNTIME_CSS_URL}" > .env
   - sh -e /etc/init.d/xvfb start
-
+install:
+  - npm install -g codecov
+  - yarn
+script:
+  - npm test
+  - codecov
