--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "node-sass": "^4.5.3",
     "null-loader": "^0.1.1",
     "parsleyjs": "^2.6.2",
+    "photoswipe": "^4.1.2",
     "raven-js": "^3.14.2",
     "react": "^15.5.4",
     "react-addons-linked-state-mixin": "^15.5.2",
