--- a/package.json
+++ b/package.json
@@ -28,107 +28,93 @@
     "react-dom": "^15.3.2"
   },
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-loader": "^6.4.1",
     "babel-plugin-react-transform": "^2.0.2",
-    "babel-polyfill": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^3.3.7",
-    "classlist-polyfill": "^1.0.3",
+    "classlist-polyfill": "^1.2.0",
     "classnames": "^2.2.5",
-    "codemirror": "^5.25.0",
-    "css-loader": "^0.28.0",
+    "codemirror": "^5.29.0",
+    "css-loader": "^0.28.5",
     "cuid": "^1.3.8",
-    "detect-browser": "^1.7.0",
-    "es6-promise": "^4.1.0",
+    "detect-browser": "^1.10.0",
+    "es6-promise": "^4.1.1",
     "events": "^1.1.1",
     "expose-loader": "^0.7.3",
-    "file-loader": "^0.11.1",
+    "file-loader": "^0.11.2",
     "handsontable": "^0.31.2",
     "immutable": "^3.8.1",
-    "jest": "^19.0.2",
-    "jquery": "^3.1.1",
-    "js-yaml": "^3.8.3",
-    "json-loader": "^0.5.4",
+    "jquery": "^3.2.1",
+    "js-yaml": "^3.9.1",
+    "json-loader": "^0.5.7",
     "less": "^2.7.2",
-    "less-loader": "^4.0.3",
-    "node-env-file": "^0.1.8",
-    "node-libs-browser": "^2.0.0",
-    "node-sass": "^4.5.3",
-    "null-loader": "^0.1.1",
-    "parsleyjs": "^2.6.2",
+    "less-loader": "^4.0.5",
+    "parsleyjs": "^2.7.2",
     "photoswipe": "^4.1.2",
-    "raven-js": "^3.14.2",
-    "react": "^15.5.4",
-    "react-addons-linked-state-mixin": "^15.5.2",
-    "react-bootstrap": "^0.30.8",
-    "react-codemirror": "^0.3.0",
-    "react-dnd": "^2.3.0",
-    "react-dnd-html5-backend": "^2.3.0",
-    "react-dom": "^15.5.4",
+    "raven-js": "^3.17.0",
+    "react": "^15.6.1",
+    "react-addons-linked-state-mixin": "^15.6.0",
+    "react-bootstrap": "^0.31.2",
+    "react-codemirror": "^1.0.0",
+    "react-dnd": "^2.4.0",
+    "react-dnd-html5-backend": "^2.4.1",
+    "react-dom": "^15.6.1",
     "react-frame-component": "^1.0.3",
     "react-handsontable": "^0.2.1",
-    "react-mixin": "^3.0.5",
-    "react-numeric-input": "^2.0.7",
-    "react-redux": "^5.0.4",
-    "react-scroll": "1.4.8",
+    "react-mixin": "^3.1.0",
+    "react-numeric-input": "^2.2.0",
+    "react-redux": "^5.0.6",
+    "react-scroll": "^1.5.4",
     "react-spinkit": "^3.0.0",
-    "react-split-pane": "^0.1.61",
-    "react-tinymce": "^0.5.1",
+    "react-split-pane": "^0.1.66",
+    "react-tinymce": "^0.6.0",
     "react-transform-hmr": "^1.0.0",
-    "redux": "^3.6.0",
-    "redux-devtools": "^3.2.0",
+    "redux": "^3.7.2",
+    "redux-devtools": "^3.4.0",
     "redux-immutable": "^4.0.0",
-    "riek": "^1.0.7",
-    "sass-loader": "^6.0.3",
+    "riek": "^1.1.0",
     "string": "^3.3.3",
     "strip": "^3.0.0",
-    "style-loader": "^0.16.1",
     "throttle-debounce": "^1.0.1",
-    "tinymce": "^4.5.6",
-    "tooltipster": "^4.2.3",
+    "tinymce": "^4.6.6",
+    "tooltipster": "^4.2.5",
     "underscore": "^1.8.3",
-    "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
-    "babel-jest": "^19.0.0",
-    "chai": "^4.0.1",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jest": "^19.0.1",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-mocha": "^4.9.0",
-    "eslint-plugin-react": "^6.10.3",
+    "babel-jest": "^20.0.3",
+    "chai": "^4.1.1",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jest": "^20.0.3",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-mocha": "^4.11.0",
+    "eslint-plugin-react": "^7.3.0",
     "expect": "^1.20.2",
-    "express": "^4.15.2",
-    "file-loader": "^0.11.1",
-    "jest": "^19.0.2",
-    "json-loader": "^0.5.4",
+    "express": "^4.15.4",
+    "jest": "^20.0.4",
     "node-env-file": "^0.1.8",
     "node-libs-browser": "^2.0.0",
     "node-sass": "^4.5.3",
     "null-loader": "^0.1.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-transform-hmr": "^1.0.0",
-    "redux-devtools": "^3.2.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
-    "wdio-dot-reporter": "0.0.8",
-    "wdio-mocha-framework": "^0.5.10",
-    "wdio-selenium-standalone-service": "0.0.8",
-    "wdio-spec-reporter": "^0.1.0",
+    "url-loader": "^0.5.9",
+    "wdio-dot-reporter": "^0.0.9",
+    "wdio-mocha-framework": "^0.5.11",
+    "wdio-selenium-standalone-service": "^0.0.9",
+    "wdio-spec-reporter": "^0.1.2",
     "webdriverio": "^4.8.0"
   }
 }
