--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "null-loader": "^0.1.1",
     "parsleyjs": "^2.6.2",
     "photoswipe": "^4.1.2",
+    "query-string": "^5.0.0",
     "raven-js": "^3.14.2",
     "react": "^15.5.4",
     "react-addons-linked-state-mixin": "^15.5.2",
