--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "handsontable": "^0.31.2",
+    "html": "^1.0.0",
     "immutable": "^3.8.1",
     "jquery": "^3.1.1",
+    "js-beautify": "^1.7.3",
     "js-yaml": "^3.8.3",
     "json-loader": "^0.5.7",
     "less": "^2.7.2",
@@ -69,6 +71,7 @@
     "react-addons-linked-state-mixin": "^15.5.2",
     "react-bootstrap": "^0.30.8",
     "react-codemirror": "^0.3.0",
+    "react-dd-menu": "^2.0.2",
     "react-dnd": "^2.3.0",
     "react-dnd-html5-backend": "^2.3.0",
     "react-dom": "^15.5.4",
