cobertura-coverage.xmlを出力するように変更

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "jest": {
     "verbose": true,
     "coverageDirectory": "./coverage/",
+    "coverageReporters": ["json", "lcov", "cobertura"],
     "collectCoverage": true
   },
   "peerDependencies": {
