--- a/package.json
+++ b/package.json
@@ -21,9 +21,25 @@
     "dist"
   ],
   "jest": {
+    "setupFiles": [
+      "./enzyme.setup.js"
+    ],
+    "unmockedModulePathPatterns": [
+      "react",
+      "enzyme",
+      "jest-enzyme"
+    ],
+    "testEnvironment": "enzyme",
+    "testEnvironmentOptions": {
+      "enzymeAdapter": "react15"
+    },
     "verbose": true,
     "coverageDirectory": "./coverage/",
-    "coverageReporters": ["json", "lcov", "cobertura"],
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "cobertura"
+    ],
     "collectCoverage": true
   },
   "peerDependencies": {
@@ -32,8 +48,8 @@
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "6",
+    "babel-loader": "^7.1.4",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -109,6 +125,8 @@
   "devDependencies": {
     "babel-jest": "^19.0.0",
     "chai": "^4.0.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-15": "^1.0.5",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-loader": "^1.9.0",
@@ -120,6 +138,11 @@
     "expect": "^1.20.2",
     "express": "^4.15.2",
     "jest": "^19.0.2",
+    "jest-cli": "^22.4.3",
+    "jest-environment-enzyme": "^6.0.0",
+    "jsdom": "^11.6.2",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "15.5",
     "wdio-dot-reporter": "^0.0.9",
     "wdio-mocha-framework": "^0.5.11",
     "wdio-selenium-standalone-service": "^0.0.9",
